# Database-and-application-refactoring

./: README.md
backend/: .envrc  .gitignore
backend/crates/api-tests/: Cargo.toml
backend/crates/api-tests/src/: auth.rs  drawing.rs  user.rs
backend/crates/core-backend/: Cargo.toml
backend/crates/core-backend/src/: auth.rs  error.rs  globals.rs  lib.rs  model.rs
backend/crates/core-backend/src/resource/: drawing.rs  user.rs
backend/crates/core-tests/: Cargo.toml
backend/crates/core-tests/src/: drawing.rs
backend/crates/image-backend/: Cargo.toml
backend/crates/image-backend/src/: error.rs  globals.rs  lib.rs  main.rs  model.rs
backend/crates/image-backend/src/resource/: image.rs
backend/crates/image-tests/: Cargo.toml
backend/crates/image-tests/src/: image.rs  lib.rs
backend/migrations/: 20250119131601_init.sql  20250120181010_add_versions.down.sql  20250120181010_add_versions.up.sql
core-backend/: .envrc  Cargo.toml  flake.nix
core-backend/api-tests/: Cargo.toml  auth.rs  drawing.rs  lib.rs  user.rs  utils.rs
core-backend/migrations/: 20241216185910_init.sql  20250116165444_init.sql  20250118203149_init.sql
core-backend/src/: auth.rs  error.rs  main.rs  model.rs
core-backend/src/resource/: drawing.rs  mod.rs  user.rs
core-backend/tests/: user.rs
frontend/: .gitignore  flake.nix  index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: Router.jsx  api.js
frontend/src/components/Auth/: Auth.jsx
frontend/src/components/Canvas/: index.jsx
frontend/src/components/CreateDrawing/: index.jsx
frontend/src/components/EditableName/: index.jsx
frontend/src/components/Header/: Header.jsx
frontend/src/components/UpdateUser/: index.jsx
frontend/src/components/Welcome/: Welcome.jsx
frontend/src/pages/: Drawing.page.jsx  Home.page.jsx  MyDrawings.page.jsx  MyProfile.page.jsx
