[package]
name = "image-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros"] }
base64 = "0.22.1"
blake3 = "1.5.5"
chrono = { version = "0.4.39", features = ["serde"] }
futures-util = "0.3.31"
image = { version = "0.25.5", default-features = false, features = ["png"] }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", default-features = false, features = ["io"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
